# remote-kata-pak-feri-acc

./: CMakeLists.txt  DOKUMENTASI_PROYEK_KP.md  PANDUAN_PENGGUNAAN.md  README.md  partitions.csv  sdkconfig  sdkconfig.old  sdkconfigS  wiring.md
.cache/clangd/index/: aes3_tie_log.c.EEE8459028675D7D.idx  aes3_tie_log.c.F38678B98C9F1038.idx  audio_task.c.53E126844E82B3FE.idx  audio_task.c.67B525B6BFB095F0.idx  audio_task.h.6147E27C6FE7DDD7.idx  audio_task.h.D9F6CCEEF0A70D4B.idx  button_input.c.E5D63E803E2E8A09.idx  button_input.h.42163275F132B34E.idx  config.h.78B74404A89799EB.idx  config.h.8BC4B73ABA82B466.idx  dl_lib.h.9134D879DCE29B44.idx  dl_lib.h.F557002E680E8BDB.idx  dl_lib_coefgetter_if.h.04349BB1C96D37B2.idx  dl_lib_coefgetter_if.h.B6B38E2097B06D61.idx  dl_lib_matrix.h.D00B626908783BFA.idx  dl_lib_matrix.h.F1C2266E4C60AA7B.idx  dl_lib_matrixq.h.8C81B44F8A17DA2B.idx  dl_lib_matrixq.h.9F741A78AAA494A8.idx  dl_lib_matrixq8.h.7F610D32CF22BC7F.idx  dl_lib_matrixq8.h.CB57428C3EBE9BDA.idx  dsp_common.h.0C38D85045DE711D.idx  dsp_common.h.4FB69AD7851D116F.idx  dsp_err.h.1708D1342EDE1675.idx  dsp_err.h.26DFE44F6C81AD88.idx  dsp_err_codes.h.C10174A361C6CEEB.idx  (+454 more)
main/: CMakeLists.txt  audio_task.c  audio_task.h  button_input.c  button_input.h  config.h  espnow_comm.c  espnow_comm.h  event_queue.c  event_queue.h  failsafe.c  failsafe.h  idf_component.yml  joystick_input.c  joystick_input.h  lcd_display.c  lcd_display.h  main.c  mode_manager.c  mode_manager.h  motor_control.c  motor_control.h  oled_display.c  oled_display.h  state_machine.c  state_machine.h  types.h
(+1 files in other folders)
